# pic-mpi

./: CMakeLists.txt  DDI_IMPLEMENTATION_SUMMARY.md  DDI_REPLACEMENT_CONTEXT.md  MISSING_FOR_DDI.md  README.md  environment.yml  ford.md  fpm.toml  index.html  modules.json  search.html
app/: legacy_main.f90  main.f90
cmake/: pic-mpiConfig.cmake.in
interface/: allgather.html  allgather~2.html  allreduce.html  allreduce~2.html  bcast.html  bcast~2.html  comm_null.html  comm_null~2.html  comm_world.html  comm_world~2.html  darray_acc.html  darray_create.html  darray_get.html  darray_put.html  iprobe.html  iprobe~2.html  irecv.html  irecv~2.html  isend.html  isend~2.html  recv.html  recv~2.html  send.html  send~2.html  test.html  test~2.html  wait.html  waitall.html  waitall~2.html  wait~2.html  win_allocate.html  win_allocate~2.html  win_create.html  win_create_dynamic.html  win_create_dynamic~2.html  (+1 more)
src/: CMakeLists.txt  pic_mpi.f90  pic_mpi_legacy.f90  pic_mpi_lib.F90
src/darrays/: CMakeLists.txt  darrays.f90  darrays_core.f90  darrays_distrib.f90  darrays_dlb.f90  darrays_types.f90
src/ddi_compat/: CMakeLists.txt  ddi_api.f90  ddi_compat.f90  ddi_impl.f90
src/groups/: CMakeLists.txt  groups.f90  groups_types.f90
src/mpi/: CMakeLists.txt  pic_legacy_mpi_algorithms.f90  pic_mpi_legacy.f90
src/mpi_f08/: CMakeLists.txt  pic_mpi.f90  pic_mpi_algorithms.f90
test/: CMakeLists.txt  run_tests.sh  test_collectives.f90  test_communicators.f90  test_darrays.f90  test_ddi_compat.f90  test_groups.f90  test_point_to_point.f90  test_rma_accumulate.f90  test_rma_get_put.f90  test_rma_nonblocking.f90  test_rma_win_allocate.f90
(+330 files in other folders)
